Add support for canonical matches to names index and assert a single match